--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -3900,10 +3900,10 @@ div[class*="pane-facetapi"] a.facetapi-limit-link.open:before, .region-sidebar-f
 
 #region-branding #block-dkan-sitewide-dkan-sitewide-search-bar label, #views-exposed-form-dataset-page label { display: none; }
 
+#block-dkan-sitewide-dkan-sitewide-search-bar { clear: both; }
 @media all and (min-width: 768px) { #block-dkan-sitewide-dkan-sitewide-search-bar { position: absolute; top: 10px; right: 15px; width: 172px; }
   #block-dkan-sitewide-dkan-sitewide-search-bar form { width: 172px; }
   #block-dkan-sitewide-dkan-sitewide-search-bar input.form-control { width: 170px; height: 34px; margin: 0; } }
-#block-dkan-sitewide-dkan-sitewide-search-bar form { clear: both; }
 #block-dkan-sitewide-dkan-sitewide-search-bar form { display: block; margin: 8px 0; position: relative; width: 100%; }
 #block-dkan-sitewide-dkan-sitewide-search-bar input.form-text { padding-right: 30px; }
 #block-dkan-sitewide-dkan-sitewide-search-bar button[type="submit"], #block-dkan-sitewide-dkan-sitewide-search-bar input[type="submit"] { background: none !important; border: none; content: "\f002"; color: #555555; display: inline-block; font-size: 1.3em; font-family: "FontAwesome"; margin: 0; padding: 0; position: absolute; right: 10px; top: 5px; width: 25px; }
